<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/action_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_order_by_date"
        android:title="@string/action_order_by_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order_by_title"
        android:title="@string/action_order_by_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>